# ts-engine

./: Cargo.toml
src/: action.rs  agent.rs  card.rs  country.rs  game.rs  grammar.pest  lib.rs  main.rs  parse2.rs  record.rs  state.rs  tensor.rs
src/card/: deck.rs  effect.rs  event_value.rs  legal.rs
src/game/: replay.rs
src/state/: pending.rs  random.rs
tests/: Brashers_Ziemovit2020.record  Events1.record  Events2.record  Traps1.record  parse_files.rs
