[package]
name = "ts_engine"
version = "0.1.0"
authors = ["Justin Kur <Justink97@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3"
nom = "5"